# ChangeLog for dev-db/postgis
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/postgis/ChangeLog,v 1.64 2012/04/10 14:01:19 titanofold Exp $

  10 Apr 2012; Aaron W. Swenson <titanofold@gentoo.org> postgis-2.0.0.ebuild:
  Fixed dependencies. Fixes bug 411277.

*postgis-2.0.0 (04 Apr 2012)

  04 Apr 2012; Patrick Lauer <patrick@gentoo.org> +postgis-2.0.0.ebuild:
  Bump

  07 Mar 2012; Aaron W. Swenson <titanofold@gentoo.org> -postgis-1.3.1.ebuild,
  -postgis-1.4.0.ebuild, -postgis-1.5.0.ebuild, -postgis-1.5.0-r1.ebuild,
  -postgis-1.5.2.ebuild, -postgis-1.5.2-r3.ebuild, -postgis-1.5.3.ebuild:
  Removing old versions.

  06 Mar 2012; Brent Baude <ranger@gentoo.org> postgis-1.5.3-r1.ebuild:
  Marking postgis-1.5.3-r1 ppc for bug 376359

  24 Feb 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> postgis-1.5.3-r1.ebuild:
  x86 stable wrt bug #376359

  30 Jan 2012; Agostino Sarubbo <ago@gentoo.org> postgis-1.5.3-r1.ebuild:
  Stable for AMD64, wrt bug #376359

*postgis-1.4.2-r1 (23 Aug 2011)

  23 Aug 2011; Aaron W. Swenson <titanofold@gentoo.org> -postgis-1.4.2.ebuild,
  +postgis-1.4.2-r1.ebuild:
  Backpatched fixes from 1.5.3. Fixed typo.

*postgis-1.5.3-r1 (23 Aug 2011)

  23 Aug 2011; Aaron W. Swenson <titanofold@gentoo.org>
  +postgis-1.5.3-r1.ebuild:
  Fixed typo: ESPG -> EPSG

*postgis-1.4.2 (23 Aug 2011)

  23 Aug 2011; Aaron W. Swenson <titanofold@gentoo.org>
  -files/postgis-1.1.1_doc.patch, +files/postgis_dbs-1.4,
  +postgis-1.4.2.ebuild, -files/postgis_xsl.patch:
  Fixes bug 380095 and 380089. Remove files no longer in use.

  07 Aug 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> postgis-1.5.3.ebuild:
  x86 stable wrt bug #376359

  02 Aug 2011; Markos Chandras <hwoarang@gentoo.org> postgis-1.5.3.ebuild:
  Stable on amd64 wrt bug #376359

*postgis-1.5.3 (26 Jun 2011)

  26 Jun 2011; Aaron W. Swenson <titanofold@gentoo.org> +postgis-1.5.3.ebuild:
  Version bump
