@@ -4,14 +4,14 @@ Hash: SHA1
 AUX postgis_dbs 2096 RMD160 64b66e99aed34fb8e9523505851962a547bd41d0 SHA1 68565ab29a22ec08c7a2271f2219d653e11ca393 SHA256 dafde4a1d1d95e18facb3287baddab3c1c116933498c310438c91dbd736833ec
 DIST postgis-1.3.6.tar.gz 2227317 RMD160 1f1797c8063b40653707be404bdebdc2573bbfea SHA1 1d4c34a31994b75ef79cf139543fc80fe0bd4438 SHA256 d3b04d4a3439596a1f6368b0627f21762347cef1e0694d5471ef17c6a3b7d144
 DIST postgis-2.0.0.tar.gz 5446748 RMD160 7100818bcf4f230d4367777b236a2c0c511b69f7 SHA1 ff8c8ee9f35120a0312016297055bbfde1f45069 SHA256 12179e24e348421c60c501590fda25bd349e2f697003958d9493f5c91b280081
-EBUILD postgis-1.3.6-r1.ebuild 5644 RMD160 48c901ac584e1d7271abd7542f8d858ade1c334f SHA1 85d802aa9b774035f70a74c92d8400d8a2e76f08 SHA256 ca367f3c44cb0b20f1631ea257226f5d73c9cad82a85c17120e94ddd0fddb8dc
+EBUILD postgis-1.3.6-r1.ebuild 5653 RMD160 cf0cae297e985f2f27e851c4d2752a46281d653f SHA1 ccb6b14f21d5ab5258152e1454d435ba2be45489 SHA256 ab511899dacc95bfec20d34f1e64cd9da10cfb4c297364a3f942121fcfba26a6
 EBUILD postgis-2.0.0.ebuild 6915 RMD160 a60001385a0b508b800f2f07113e9b86404a849c SHA1 77450e93a3f01d14a89a37e225f2fb469afeced4 SHA256 75210007739ca59cde99a0fbdb8155c6f5c234eac0c6cd8e69948c2f94ac8d29
-MISC ChangeLog 9072 RMD160 9986f5eeb8d62a72007fe35d28cfc02f4f13cd85 SHA1 1a16d5f63d44359cc58efec8fde945d12a8a8aeb SHA256 c59bf4e72beb0855d73e5e26c3faf273a0e9adc956500db46d554382c2136bb1
+MISC ChangeLog 9176 RMD160 ffaf5e17a7744d31df82667e9543a6a7238c6673 SHA1 692d96bc5c568baebf7bb0839321cb29db544db3 SHA256 6d23aad8afe0f06b6d0574e5153e8ce3efce55bc65ccf8ed62f4a2a4fe696b9c
 MISC metadata.xml 481 RMD160 09ed331d86c1d68797aaf8a4912539f08f91cbb6 SHA1 a45afb667212035b630d417d2fc9632d99bbd62a SHA256 d0ab8dbe26001259f36c968e1d48ad5fda768227d99319cf4302af804a08d5ef
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (SunOS)
 
-iEYEARECAAYFAk+2UKMACgkQX3X2B8XHToms5gCfSV3wfFxKSeztb/nGtrUjFTrb
-I44An1jVG6unVwHL0q4Srxl1l8v54zUJ
-=rPlP
+iEYEARECAAYFAk/XmM0ACgkQX3X2B8XHTokhWQCeLfQ/Y5utENjIL6xVfWI9W8jX
+fGgAoIlEmfCiSNnIU9tSiZvuqyn7tFQX
+=b6SN
 -----END PGP SIGNATURE-----
