@@ -1,6 +1,9 @@
 # ChangeLog for dev-db/postgis
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/postgis/ChangeLog,v 1.64 2012/04/10 14:01:19 titanofold Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/postgis/ChangeLog,v 1.65 2012/06/04 06:47:41 zmedico Exp $
+
+  04 Jun 2012; Zac Medico <zmedico@gentoo.org> postgis-1.3.6-r1.ebuild:
+  inherit multilib for get_libdir
 
   10 Apr 2012; Aaron W. Swenson <titanofold@gentoo.org> postgis-2.0.0.ebuild:
   Fixed dependencies. Fixes bug 411277.
